@@ -1,3 +1,10 @@
+2002-01-29  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02921] use inttypes.h instead of stdint.h
+	* configure: check inttypes.h instead of stdint.h
+	* config.h.dist: s/STDINT_H/INTTYPES_H/
+	* mktable.c: use inttypes.h instead of stdint.h
+
 2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02919] no need of width
